numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@missing_closing_paren3.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/missing_closing_paren3.nbt
---
error: while parsing
  ┌─ <internal:3>:2:1
  │
2 │ 
  │ ^ Missing closing parenthesis ')'
