numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@unexpected_character.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/unexpected_character.nbt
---
error: while parsing
  ┌─ <internal:3>:1:3
  │
1 │ 2 & 3
  │   ^ Unexpected character: '&'
