numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@unexpected_character_in_identifier.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/unexpected_character_in_identifier.nbt
---
error: while parsing
  ┌─ <internal:3>:1:3
  │
1 │ pi.3
  │   ^ Unexpected character in identifier: '.'
