numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@unexpected_character_in_number_literal.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/unexpected_character_in_number_literal.nbt
---
error: while parsing
  ┌─ <internal:3>:1:6
  │
1 │ 2e-33.0
  │      ^ Unexpected character in number literal: '.'
