numbat/tests/snapshots/prelude_and_examples__parse_error_snapshots@unterminated_string.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/parse_error/unterminated_string.nbt
---
error: while parsing
  ┌─ <internal:3>:1:5
  │  
1 │   foo("hello world
  │ ╭─────^
2 │ │ 
  │ ╰^ Unterminated string
